Added API skill

--- a/index.html
+++ b/index.html
@@ -129,10 +129,18 @@
         <td>JavaScript</td>
         <td>⭐️</td>
       </tr>
+
+      <tr>
+        <td>API</td>
+        <td>⭐️⭐️⭐️</td>
+      </tr>
+      
     </table>
     <br>
     <hr size="2" noshade>
     <br>
+
+ 
 
 
 
