Modified HTML & CSS pt1

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Marino CV</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
+
+
+  <body >
     <table cellpadding="30">
       <tr>
-        <td><img src="images/marino-profile-modified.png" height="180"></td>
+        <td><img class="circleprofile" src="images/marino-profile.png" height="180"></td>
         <td><h1>Marino Barišić</h1>
-        <h3>Quality Assurance Engineer at <a href="https://extensionengine.com/"> Extension Engine</a></h3>
-        <img src="images/ee-logo.jpeg" height="40">
-        <h4>Split, Croatia</h4></td>
+        <h3>Quality Assurance Engineer @<a href="https://extensionengine.com/"> Extension Engine</a>  <img src="images/ee-logo.png" height="17"></h3>
+        <h4>Split, Croatia</h4>
+        <p>Hobbies: ⚽ 📺 🎵 </p>
+        </td>
       </tr>
     </table>
       <h3>
@@ -21,7 +25,7 @@
       </h3>
 
     <br>
-    <hr size="2" noshade>
+    <hr>
 
     <h2><ul>Work experience</ul></h2>
       <table cellpadding="50">
@@ -31,7 +35,7 @@
                 <li><h4>07/2022 - now</h4></li>
               </ul>
             </td>
-            <td><img src="images/ee-logo.jpeg" height="50"><h4>Extension Engine</h4></td>
+            <td><img src="images/ee-logo.png" height="50"><h4>Extension Engine</h4></td>
             <td>
               <ul type="circle">
               <li>In progress...</li>
@@ -91,7 +95,7 @@
       </li>
     </ul>
 
-    <hr size="2" noshade>
+    <hr>
 
     <h2>
       <ul>
@@ -134,13 +138,13 @@
         <td>API</td>
         <td>⭐️⭐️⭐️</td>
       </tr>
-      
+
     </table>
     <br>
-    <hr size="2" noshade>
+    <hr>
     <br>
 
- 
+
 
 
 
