--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Contact</title>
   </head>
-  <body>
+  <body style="background-color: #CBF1F5;">
     <a href="index.html">Back to profile</a>
     <br>
     <br>
