Modified hr CSS

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body style="background-color: #CBF1F5;">
     <a href="index.html">Back to profile</a>
